add event listeners to editable h1 an p to blur when ESC is pressed

--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,10 @@ header {
     border-radius: 0.5em;
 }
 
+#notes-list {
+    margin-bottom: 1em;
+}
+
 .notes-list-item {
     position: relative;
     background: white;
